# otog.app

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .prettierrc  .terraform.lock.hcl  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.todo  fly.toml  main.tf  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
.github/workflows/: fly.yml
machines/: README.md
machines/otog-compiler/: README.md
otog-db/: Makefile  fly.toml
otog-ftp/: vsftpd.conf
otog-isolate/: .dockerignore  Dockerfile  app.ts  fly.toml  grading.ts  package.json  pnpm-lock.yaml  tsconfig.json
otog-isolate/test/: grading.sh  grading.ts  main.cpp
otog-isolate/test/testcases/: 2.sol  3.in  3.sol  4.in  4.sol  5.in  5.sol
otog-judge/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  bun.lockb  http.ts  package.json
otog-judge/.devcontainer/: Dockerfile  devcontainer.json
otog-judge/.devcontainer/isolate-feature/: devcontainer-feature.json  install.sh
otog-judge/problems/isprime/: 10.sol
otog-judge/src/: main.rs
otog-judge/test/: fizzbuzz.cpp  isprime.cpp  test.ts
otog-sleepy/: fly.toml
prisma/: schema.prisma
prisma/migrations/20221225032427_init/: migration.sql
src/: app.css  app.d.ts  hooks.server.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/(app)/p/: +page.server.ts  +page.svelte
src/routes/(app)/p/[id]/: +page.server.ts  +page.svelte
src/routes/(app)/p/[id]/edit/: +page.server.ts  +page.svelte
src/routes/(app)/p/new/: +server.ts
src/routes/(app)/u/[id]/: +page.server.ts  +page.svelte
src/routes/(auth)/submit/: +server.ts  fp-cpp-compiler.ts
src/routes/fs/[...rest]/: +page.server.ts  +page.svelte
src/routes/ping/: +server.ts
static/: main.cpp
